--- a/VRChat/66/1007666.html
+++ b/VRChat/66/1007666.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IKhn77guSdM5Hp1sQuJvYWEBU4JCJHlHa+UsdneX/d0="></script>
+    "RBBMEGWy9Nb1H946H/i8HBlQ5gcXTC/GOGwUTsQf1fI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[BP]槍盾セット","description":"[BP]槍盾セット　ver1.0\n\n●商品説明\nシンプルな槍と盾のセットになります。\n\n●内容物\n・槍\nspear.fbx　　　　　(槍本体)\nspear_Albedo.png　（Albedoマップ）\nspear_Metallic.png（Metallicマップ）\nspear_Normal.png　（Normalマップ）\nspear.unitypackage\n\nポリゴン数:2112\n\n・盾\nshield.fbx　　　　　(盾本体)\nshield_Albedo.png　（Albedoマップ）\nshield_Metallic.png（Metallicマップ）\nshield_Normal.png　（Normalマップ）\nshield.unitypackage\n\nポリゴン数:1088\n\n●利用規約\n改変・商用利用は可となります。\n＊取り出せる形での配布は禁止となります。\n\n【免責事項】\nこの製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n何かご質問がありましたらTwitter:@buchipanda_VRまでご連絡をお願いします。","url":"https://booth.pm/ja/items/1007666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/aabbb614-482e-4b6d-8e57-4b27696be81e/i/1007666/7ade0802-5b3a-467c-a330-421644690ca4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IKhn77guSdM5Hp1sQuJvYWEBU4JCJHlHa+UsdneX/d0="></script>
+    nonce="RBBMEGWy9Nb1H946H/i8HBlQ5gcXTC/GOGwUTsQf1fI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1007666/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1007666/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
