--- a/VRChat/94/1007394.html
+++ b/VRChat/94/1007394.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "TWkJmjr64y0Sxt52fUEAd/dgtCvipVH4vR5WmqE1mV0="></script>
+    "vTWXfUfdQhZVUiI/swEW+AGozjCb5V/FEQpArIU3PZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鬼火【VRC利用想定】","description":"いわゆる鬼火っぽいものをパーティクルで作りました。\n\n画像1枚目：旧版\n画像2枚目：新版(Quest対応済)\n\nサンプルはこちら(旧版)\nhttps://twitter.com/kageha_nya/status/1038743740221775872\n\n不具合などあると思うので改善要望、可能な範囲で応えます\n\n","url":"https://booth.pm/ja/items/1007394","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/3cd38ef4-b1af-4a95-9044-19efad8752ed/i/1007394/4774dde3-58a6-4539-beb8-e07be1fc5170_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TWkJmjr64y0Sxt52fUEAd/dgtCvipVH4vR5WmqE1mV0="></script>
+    nonce="vTWXfUfdQhZVUiI/swEW+AGozjCb5V/FEQpArIU3PZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1007394/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               313
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1007394/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               313
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
