--- a/VRChat/66/1007366.html
+++ b/VRChat/66/1007366.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wlsqud9/4dueC1GrvcHZDYW65lHk2EFQ/qibDa/iqro="></script>
+    "jSs/qMHd/xjcHzeLaj9XdWg3dvj/68yM5x1rYxpv7NM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ヘルメット","description":"ヘルメットです。\n本作品は難しい事抜きの無料配布です。\n改変等ご自由にどうぞ\n※そのままの状態での再配布、再販売だけはおやめください\n\n\nご支援いただける方だけ支援用からポチっとして\n頂けると飛んで喜びます。\n\n\n探検は安全第一！","url":"https://booth.pm/ja/items/1007366","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/50dd0ee9-b096-417f-bb42-d66b91a07be1/i/1007366/54668e10-4b1a-4343-89db-5f0f94fc9d5e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wlsqud9/4dueC1GrvcHZDYW65lHk2EFQ/qibDa/iqro="></script>
+    nonce="jSs/qMHd/xjcHzeLaj9XdWg3dvj/68yM5x1rYxpv7NM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1007366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1007366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
