--- a/VRChat/02/1006902.html
+++ b/VRChat/02/1006902.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IBVcovJWczoZLVrImX++u68CzlpMidJ5l2uVD//QLyA="></script>
+    "2umbijEwQ1awpLeAVa0k7rIKfa4/e8G+4vGwEbjo1l4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料DL】緋色式ボクセル素体","description":"MagicaVoxelというツールで誰でも簡単にボクセルアバターが作れるボクセル素体だよ。\nボーンもfbxで同梱してるので、あとは好きな服装と髪型にしよう。\nこれを使ってみんなもボクセルアバターで遊ぼう。\n\n","url":"https://booth.pm/ja/items/1006902","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ab70c4eb-b315-479e-a3b3-7cbfdf50956c/i/1006902/3e1d61ed-add6-42c3-8f38-6f279504eb4b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IBVcovJWczoZLVrImX++u68CzlpMidJ5l2uVD//QLyA="></script>
+    nonce="2umbijEwQ1awpLeAVa0k7rIKfa4/e8G+4vGwEbjo1l4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1006902/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1006902/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
