--- a/VRChat/62/1006962.html
+++ b/VRChat/62/1006962.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KxURE5L1leHIXnUSfpkj6sepaqif44UMylyORv+NOc4="></script>
+    "Y0DoqLGGcgvaZPyimdu2RwMfVTtmejoneaARqcltV9Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Manji Cube","description":"暇つぶしに作った卍キューブです。\nアクセサリや、インテリアとしてご使用下さい。\n\n\n構造上ポリゴン数が1240と少し多くなっております。\n\n\nどこからみても卍・・・と言う訳にはいかず、３方向からは卍、もう３方向からは卐に見える物となっております。\n\nシェーダーを用いり、各面に５つずつついている小さな卍の文字が点滅するようになっています。\nLitManjiマテリアルのInspectorビューより、任意の色への変更や点滅の速さの変更ができるようになっています。\n\nprefabファイルをご使用下さい。\n\n同梱されているreadmeに書かれている内容はここに書かれているものと同じです。\n\nライセンスは放棄するので、改変、再配布、商用利用等、ご自由にどうぞ。\n\nなお、使用に際して生じたいかなる損害に関して頒布者（suraimu752）は一切の責任を負わないものとします。\n\n\nなにか連絡が必要な場合はTwitter(@natsumugi726)までリプかDMを送って下さい。","url":"https://booth.pm/ja/items/1006962","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ab6abf2f-1e54-4c70-92b9-8e0aa2a0b4a6/i/1006962/20f7893f-e77b-4a00-8492-2398900e47c6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KxURE5L1leHIXnUSfpkj6sepaqif44UMylyORv+NOc4="></script>
+    nonce="Y0DoqLGGcgvaZPyimdu2RwMfVTtmejoneaARqcltV9Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1006962/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1006962/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
