--- a/VRChat/13/1006913.html
+++ b/VRChat/13/1006913.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AVkGrKMsAVgs6JTndy+RQ7Idi6HPekUNu99L9gk4+E8="></script>
+    "fV4KOKhfF/B4tv/F4E/gym8aPcuD5e02SuoBKEYlzGk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『キッシュ』用髪型セット","description":"##モデル説明##\n『キッシュ』用髪型セット\n制作者：muta\n\n※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。\n\n#内容物\n・Hair_TypeA.fbx\n・Hair_TypeB.fbx\n・Hair_TypeC.fbx\n・Hair_TypeD.fbx\n・Hair_TypeE.fbx\n・Tail.fbx\n　それぞれの髪型データとバージョン1に移植するための尻尾のデータです。\n　見た目についてはReadme内の髪型一覧.pngを確認してください。\n\n・hair.png\n　髪のテクスチャです。\n\n#モデルについて\n　『キッシュ』用髪型セットとしてボーンのセットアップされた髪型のデータが5種類含まれています。\n　※本体モデル『キッシュ』はこのデータに含まれておりません。\n　Tail.fbxについては、バージョン1の場合髪と尻尾のメッシュが別れていないので、導入時に新たに追加する必要があります。\n\n#導入方法について\n　Unityでの導入方法の画像を用意したので、Readme内の髪型移植方法.pngを確認してください。\n\n#『キッシュ』以外での使用について\n　利用規約通り改造の範囲内として問題ありませんが、そういった改造が許可されたモデルにのみ導入してください。","url":"https://booth.pm/ja/items/1006913","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/10942f35-97bb-434d-9f5a-6083e00c7891/i/1006913/ab340529-ce5d-4547-b79d-f8973444ff27_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AVkGrKMsAVgs6JTndy+RQ7Idi6HPekUNu99L9gk4+E8="></script>
+    nonce="fV4KOKhfF/B4tv/F4E/gym8aPcuD5e02SuoBKEYlzGk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1006913/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1573
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1006913/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1573
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
