--- a/VRChat/55/1006555.html
+++ b/VRChat/55/1006555.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ntp/xpIEDAJ2XgkQqFx2jgOZQvsU64TRX8lHnkHuMZ4="></script>
+    "eb1ydV/MgbnnI/nhu8wRTL9UJCtmiJ+WsWJhw/HwyPM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け]Dボーン式両手槍","description":"[VRChat向け]Dボーン式両手槍\n\n制作　oga\ntwitter @oga_pleconia\n\nダイナミックボーンを使用した両手持ち槍（というかハルバード）のモデルです\n※有償アセット「ダイナミックボーン」を予めご用意ください\n※同梱の解説画像類はアバターアップロードをしたことがある人向けです\n※デスクトップモードでは使えないと思います\n\n※※VRChatの挙動として、特定条件（ワールド内の処理負荷？揺れモノの数？）でダイナミックボーンの処理が一部省略される現象があるようです。この状態になると両手持ちが上手く動作せず、現象が起きているプレイヤーがゲームを再起動するまで直りません。この状態は同期されないため、槍がしっかり両手持ちに見えているプレイヤーと、そうでないプレイヤーが混在してしまうことになります。\n\n・データ内容\nfbx2018形式（unity5.6へのインポート確認済）\nmaya ascii形式（2018.2）\nテクスチャPSD、PNG\n使用方法解説メモ\n\n\n・仕様\nポリゴン数　2016\nジョイント　6本\n\n\n・許可事項\n本データおよび本データの改変物を動画や画像、ゲームに使用することを許可、それらの商用も許可\nVR、UNITY関係以外でもOK。クレジットは不要です\n\n\n・制限事項\n本データおよび本データの改変物自体を配布・販売することは禁止\n（vrchatのアバターペデスタルのようなローカルにダウンロード出来ない形であれば許可）\n（ゲームに含めることはOK。データ自体を取り出せる配布がダメ）","url":"https://booth.pm/ja/items/1006555","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58ea32ec-ba52-48e9-8014-360fbbd7a39a/i/1006555/6b3bfa5a-844f-4ee2-b466-9ee0385f0c62_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ntp/xpIEDAJ2XgkQqFx2jgOZQvsU64TRX8lHnkHuMZ4="></script>
+    nonce="eb1ydV/MgbnnI/nhu8wRTL9UJCtmiJ+WsWJhw/HwyPM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1006555/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               212
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1006555/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               212
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
